add snack action